2007-06-04  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: added some debug code to check capabilities
	* Banter/Application.cs: removed dead lines
	* Banter/Conversation.cs: Added IndicateSystemMessage method
	
	  Added system messages for video chat state changes

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Fixed a typo in the NEWS doh!

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: upped the version to 0.1.6 for the next iteration

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated NEWS file for 0.1.5 release

2007-06-01  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Removed references to WebKit altogether.

2007-06-01  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Commented-out accidental inclusions of WebKit.

2007-06-01  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Removed old tapioca references.
	* Makefile.am: Ditto.
	* Banter/Application.cs: Ditto.
	* Banter/Makefile.am: Ditto.

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs, Banter/HIGMessageDialog.cs: integrated patch
	  from Johnny Jacob <johnnyjacob@gmail.com> 

2007-05-30  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added AvatarManager.cs to build
	* Banter/AvatarSelector.cs: Modified to use the new AvatarMenuItem
	  events and update the avatar
	* Banter/AvatarMenuItem.cs: Updated to handle all events and trigger an
	  event when a new avatar is selected
	* Banter/AvatarManager.cs: new class to manage all cached avatars. 
	  Currently it's in memory only.
	* Banter/AvatarButton.cs: Changed AvatarButton to also store the index
	  of the button to be retrieved when clicked
	* Banter/Makefile.am: Updated to include AvatarManager.cs

2007-05-30  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Added AvatarButton
	* Banter/ComplexMenuItem.cs: Added from Banshee project.... Awesome
	  widget!  Thanks Aaron!