@@ -1,3 +1,9 @@
+2007-06-06  Brady Anderson <banderso@novell.com> 
+
+	* Banter/AccountManagement.cs, Banter/Account.cs,
+	  Banter/Application.cs, Banter/Conversation.cs:
+	  debugging/prototyping peer video window
+
 2007-06-04  Brady Anderson <banderso@novell.com> 
 
 	* Banter/Account.cs: added some debug code to check capabilities
